@@ -232,7 +232,7 @@ class EditAgent(Delegate):
 
         self.undo()
 
-    @util.silent(AssertionError)
+    @util.asserted_return
     def on_view_renderer_edited(self, renderer, path, value, col):
         """Finish editing cell."""
 
