@@ -37,7 +37,7 @@ class TimeCellRenderer(gtk.CellRendererText):
         editor.remove_widget()
         self.emit("editing-canceled")
 
-    @util.silent(AssertionError)
+    @util.asserted_return
     def _on_editor_key_press_event(self, editor, event):
         """End editing if Enter pressed."""
 
