@@ -130,7 +130,7 @@ class LanguageDialog(GladeDialog):
         for lang in self._langs:
             store.append([langlib.get_long_name(lang)])
 
-    @util.silent(AssertionError)
+    @util.asserted_return
     def _on_tree_view_selection_changed(self, selection):
         """Save the language."""
 
