@@ -100,7 +100,7 @@ class SearchDialog(GladeDialog):
         self._dialog.set_type_hint(gtk.gdk.WINDOW_TYPE_HINT_NORMAL)
         self._dialog.set_default_response(gtk.RESPONSE_CLOSE)
 
-    @util.silent(AssertionError)
+    @util.asserted_return
     def _add_pattern(self):
         """Add the current pattern to the pattern combo box."""
 
@@ -118,7 +118,7 @@ class SearchDialog(GladeDialog):
             store.append([pattern])
         self.application.update_gui()
 
-    @util.silent(AssertionError)
+    @util.asserted_return
     def _add_replacement(self):
         """Add the current replacement to the replacement combo box."""
 
@@ -364,7 +364,7 @@ class SearchDialog(GladeDialog):
             util.browse_url(urls.REGEX_HELP)
             self.stop_emission("response")
 
-    @util.silent(AssertionError)
+    @util.asserted_return
     def _on_text_view_focus_out_event(self, text_view, event):
         """Save changes made in the text view."""
 
