@@ -1,5 +1,11 @@
 2007-05-20  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
+	* gaupol/util.py (asserted_return):
+	New decorator to replace silent(AssertionError).
+	Fix all references.
+
+2007-05-20  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
 	* gaupol/agents/open.py:
 	* gaupol/determiner.py:
 	* gaupol/liner.py:
